# bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
bridge/: README.md
bridge_core/: __init__.py  auth.py  file_repository.py  frontmatter.py  models.py  policy.py  repository.py  runtime.py  service.py  tooling.py
config/: bridge_api.example.env
deploy/systemd/: README.md  bridge-api.service  bridge-intake-watch@.service  example-agent.env
docs/: README.md  architecture.md  deployment.md  runtime-layout.md
examples/handoffs/: action-request.md  approval-needed-escalation.md  bridge-incident.md  issue-handoff.md  result-closure.md
scripts/: bridge_agent.py  bridge_api_server.py  bridge_audit_view.py  bridge_cli.py  bridge_hermes.py  bridge_intake_watch.py  bridge_jarvy.py  bridge_jordan.py  bridge_patrol.py  bridge_rotate_tokens.py  bridge_wrapper_common.py
tests/: conftest.py  test_bridge_api.py  test_bridge_audit_view.py  test_bridge_auth.py  test_bridge_cli.py  test_bridge_frontmatter.py  test_bridge_intake_watch.py  test_bridge_patrol.py  test_bridge_policy.py  test_bridge_rotate_tokens.py  test_bridge_service.py  test_bridge_wrappers.py
