[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bridge"
version = "0.1.0"
description = "A bounded filesystem + local API bridge for explicit multi-agent handoffs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Bridge contributors" }
]
keywords = ["agents", "bridge", "handoff", "local-api", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
